# cargo-scan

./: .gitignore  .gitmodules  AUDITING.md  Cargo.toml  LICENSE  Makefile  README.md  scan.py
.github/workflows/: build.yml  cargo_action_fmt.yml  checks.yml  makefile.yml  results.yml  test_results.yml  update.yml
audits/: 2022-09-28.md  TEMPLATE.md  autocfg.md  cc.md  clap.md  crossbeam-channel.md  env_logger.md  getrandom.md  h2.md  hyper.md  memchr.md  mio.md  num_cpus.md  pkg-config.md  proc-macro2.md  rustc_version.md  socket2.md  stable_deref_trait.md  template.md  termcolor.md  thiserror.md  tokio-util.md  tokio.md  url.md
audits/hyper-audits/: bytes-1.4.0.audit  cfg-if-1.0.0.audit  fnv-1.0.7.audit  futures-channel-0.3.28.audit  futures-core-0.3.28.audit  futures-task-0.3.28.audit  futures-util-0.3.28.audit  http-0.2.9.audit  http-body-0.4.5.audit  httparse-1.8.0.audit  httpdate-1.0.2.audit  hyper-0.14.27.audit  itoa-1.0.6.audit  libc-0.2.146.audit  memchr-2.5.0.audit  num_cpus-1.15.0.audit  once_cell-1.18.0.audit  pin-project-lite-0.2.9.audit  pin-utils-0.1.0.audit  proc-macro2-1.0.60.audit  quote-1.0.28.audit  syn-2.0.18.audit  tokio-macros-2.1.0.audit  tower-service-0.3.2.audit  tracing-0.1.37.audit  tracing-core-0.1.31.audit  try-lock-0.2.4.audit  unicode-ident-1.0.9.audit  want-0.3.1.audit
audits/manual-old/: TEMPLATE.md  cc.md  chrono.md  crossbeam-channel.md  h2.md  libc.md  num_cpus.md  parking_lot_core.md  tokio-util.md  version_check.md
data/: crates-top1000.csv  mozilla-audits.csv  mozilla-exempt.csv  of_interest.txt  test-crates.csv
data/crate-lists/: known_crashes.csv  mozilla-exempt.csv  test-crates.csv  test-excluded.csv  top10.csv  top100.csv  top1000.csv  top10000.csv
data/crate-lists/batched/: 11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  61.csv  62.csv  63.csv  64.csv  65.csv  66.csv  67.csv  68.csv  69.csv  70.csv
data/results/: mozilla-audits_all.csv  mozilla-audits_metadata.csv  mozilla-audits_pattern.txt  mozilla-audits_patterns.csv  mozilla-audits_summary.csv  mozilla-audits_summary.txt  mozilla-exempt_all.csv  mozilla-exempt_metadata.csv  mozilla-exempt_pattern.txt  mozilla-exempt_patterns.csv  mozilla-exempt_summary.csv  mozilla-exempt_summary.txt  test_all.csv  test_metadata.csv  test_pattern.txt  test_patterns.csv  test_summary.csv  test_summary.txt  top10000_all.csv  top10000_metadata.csv  top10000_pattern.txt  top10000_patterns.csv  top10000_summary.csv  top10000_summary.txt  top1000_all.csv  top1000_metadata.csv  top1000_pattern.txt  top1000_patterns.csv  top1000_summary.csv  top1000_summary.txt  top100_all.csv  top100_metadata.csv  top100_pattern.txt  top100_patterns.csv  top100_summary.csv  top100_summary.txt  top10_all.csv  top10_metadata.csv  top10_pattern.txt  top10_patterns.csv  (+2 more)
data/results/audits/: caller_checked.csv  sinks.csv  stats_summary.csv
data/test-packages/: .gitignore
data/test-packages/caller-checked/: Cargo.toml
data/test-packages/caller-checked/src/: lib.rs  main.rs  sub.rs
data/test-packages/cfg-ex/: Cargo.toml
data/test-packages/cfg-ex/src/: main.rs
data/test-packages/dependency-ex/: Cargo.toml
data/test-packages/dependency-ex/src/: lib.rs
data/test-packages/dependency-parent/: Cargo.toml
data/test-packages/dependency-parent/src/: main.rs
data/test-packages/dummy/src/: main.rs
data/test-packages/ffi-ex/: Cargo.toml
data/test-packages/ffi-ex/src/: main.rs
data/test-packages/fns-closures/: Cargo.toml
data/test-packages/fns-closures/src/: closure_effects.rs  closure_types.rs  consts.rs  lib.rs  unsafe_fn_pointers.rs
data/test-packages/fnv_minimal/: lib.rs
data/test-packages/inline-ex/: Cargo.toml
data/test-packages/inline-ex/src/: main.rs
data/test-packages/libc-ex/: Cargo.toml
data/test-packages/libc-ex/src/: main.rs
data/test-packages/macro_test/: Cargo.toml
data/test-packages/macro_test/src/: main.rs
data/test-packages/num_cpus_minimal/src/: main.rs
data/test-packages/parsing-ex/: Cargo.toml
data/test-packages/parsing-ex/src/: lib.rs
data/test-packages/permissions-ex/: Cargo.toml
data/test-packages/permissions-ex/src/: lib.rs
data/test-packages/recursion-ex/: Cargo.toml
data/test-packages/resolution-ex/: Cargo.toml
data/test-packages/toy-crates/: Cargo.toml
data/test-packages/trait-ex/: Cargo.toml
data/test-packages/unsafe-test/: Cargo.toml
editor-plugin/: Makefile  package-lock.json  package.json
editor-plugin/src/: audit_annotations.ts  commands.ts  decorations.ts  extension.ts  file_tree_view.ts  util.ts
experiments/: cleanup_crates_csv.py  scan.py
experiments/results/: all.csv  summary.txt  test_all.csv  test_summary.txt  top10000_summary.txt  top1000_summary.txt  top100_all.csv  top100_summary.txt  top10_all.csv  top200_all.csv  top200_summary.txt
lang_server/: Cargo.toml
lang_server/src/: lib.rs  location.rs  main.rs  notification.rs  request.rs  server.rs  util.rs
mirai/: config.json
notes/: policy-language.md
notes/archive/: 2022-10.md
policies/: fnv.toml  none.txt  percent-encoding.toml  permissions-ex.pc  permissions-ex.toml  rustc_version.policy  rustc_version.toml  url.policy
policy/: Cargo.toml
policy/src/: main.rs  policy.rs
results/: all.csv  summary.txt
rust-src/: Cargo.toml  README.md
rust-src/src/: driver.rs  effect.rs  ident.rs  lib.rs  main.rs  name_resolution.rs  policy.rs  scanner.rs  sink.rs  util.rs
rust-src/src/old/: mod.rs  policy.rs
scripts/: check_install.py  cleanup_crates_csv.py  scan.py  tests_checksum.py  update_test_crates_csv.py  view_callgraph.py
src/: attr_parser.rs  audit_chain.rs  audit_file.rs  download_crate.rs  effect.rs  gather.py  hacky_resolver.rs  ident.rs  lib.rs  loc_tracker.rs  macro_expand.rs  main.rs  name_resolution.rs  offset_maping.rs  policy.rs  resolve.rs  scan.py  scan_stats.rs  scanner.rs  sink.rs  test.rs  util.rs
src/auditing/: audit.rs  chain.rs  info.rs  mod.rs  reset.rs  review.rs  util.rs
src/resolution/: hacky_resolver.rs  mod.rs  name_resolution.rs  resolve.rs  util.rs
tests/: policy_test.rs
(+17 files in other folders)
