[package]
name = "cargo-scan"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scan and analyze Cargo dependencies"
repository = "https://github.com/PLSysSec/cargo-scan"
readme = "README.md"
default-run = "scan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
codespan-reporting = "0.11.1"
colored = "2.0.4"
env_logger = "0.10.0"
inquire = "0.6.2"
log = "0.4.20"
petgraph = "0.6.4"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1.0.33"
ra_ap_hir = "0.0.171"
ra_ap_hir_ty = "0.0.171"
chalk-ir = "0.93.0"
ra_ap_ide = "0.0.171"
ra_ap_ide_db = "0.0.171"
ra_ap_paths = "0.0.171"
ra_ap_project_model = "0.0.171"
ra_ap_rust-analyzer = "0.0.171"
ra_ap_syntax = "0.0.171"
ra_ap_vfs = "0.0.171"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
sha2 = "0.10.7"
syn = { version = "2.0", features = ["full", "extra-traits"] }
toml = "0.7.6"
walkdir = "2.3.3"
itertools = {version = "0.11.0"}
ra_ap_hir_expand = "0.0.171"
ra_ap_hir_def = "0.0.171"
ra_ap_load-cargo = "0.0.171"
cargo-lock = { version = "9.0.0", features = ["dependency-tree"] }
curl = "0.4.44"
flate2 = "1.0.27"
tar = "0.4.40"
cargo = "0.73.1"
cargo_toml = "0.15.3"
semver = "1.0.18"
assert_cmd = "2.0.12"
