[workspace]
members = ["lang_server"]
exclude = ["data/packages/", "data/test-packages/"] 

[package]
name = "cargo-scan"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scan and analyze Cargo dependencies"
repository = "https://github.com/PLSysSec/cargo-scan"
readme = "README.md"
default-run = "audit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[dependencies]
anyhow.workspace = true
assert_cmd = "2.0.12"
cargo = "0.74.0"
cargo_toml = "0.17.0"
cargo-lock = { version = "9.0.0", features = ["dependency-tree"] }
clap = { version = "4.4.8", features = ["derive"] }
codespan-reporting = "0.11.1"
colored = "2.0.4"
curl = "0.4.44"
env_logger.workspace = true
flate2 = "1.0.28"
inquire = "0.6.2"
itertools = {version = "0.12.0"}
log.workspace = true
petgraph = "0.6.4"
proc-macro2 = { version = "1.0.69", features = ["span-locations"] }
quote = "1.0.33"
ra_ap_hir = "0.0.185"
ra_ap_hir_def = "0.0.185"
ra_ap_hir_expand = "0.0.185"
ra_ap_hir_ty = "0.0.185"
ra_ap_ide = "0.0.185"
ra_ap_ide_db = "0.0.185"
ra_ap_load-cargo = "0.0.185"
ra_ap_paths = "0.0.185"
ra_ap_project_model = "0.0.185"
ra_ap_syntax = "0.0.185"
ra_ap_vfs = "0.0.185"
ra_ap_cfg = "0.0.185"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = "3.4.0"
semver = "1.0.20"
sha2 = "0.10.8"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tar = "0.4.40"
toml = "0.8.8"
walkdir = "2.4.0"
parse-display = "0.8.2"
home = "0.5.5"
csv = "1.3.0"
threadpool = "1.8.1"

[workspace.dependencies]
serde_json = "1.0.108"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
anyhow = "1.0.75"
env_logger = "0.10.1"