[package]
name = "cargo-scan"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scan and analyze Cargo dependencies"
repository = "https://github.com/PLSysSec/cargo-scan"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
proc-macro2 = { version = "1.0.47", features = ["span-locations"] }
serde = { version = "1.0.147", features = ["derive"] }
syn = { version = "1.0.105", features = ["full", "extra-traits"] }
toml = "0.5.9"
walkdir = "2.3.2"
