[package]
name = "cargo-scan"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scan and analyze Cargo dependencies"
repository = "https://github.com/PLSysSec/cargo-scan"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0.29", features = ["derive"] }
codespan-reporting = "0.11.1"
colored = "2.0.0"
inquire = "0.5.3"
proc-macro2 = { version = "1.0.47", features = ["span-locations"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.92"
serde_with = "2.2.0"
syn = { version = "1.0.105", features = ["full", "extra-traits"] }
toml = "0.5.9"
walkdir = "2.3.2"
